flux/infrastructure/services/istio-ingress/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "*.stehessel.org"
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - "*.stehessel.org"
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: stehessel-org-tls
        mode: SIMPLE
